--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
       <h1 class="title">Hello world, I am 2603232 </h1>
+      <a href=./2603232-lab2.html>click here</a>
   </body>
 </html>
